<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".Sign_up_page"
    tools:visibility="visible">

    <!-- ConstraintLayout for the first section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Back button -->
        <Button
            android:id="@+id/backBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00689AE4"
            android:text="@string/back_arrow"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Title asking for password -->
        <TextView
            android:id="@+id/askPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Please choose a password"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBut" />

        <!-- Description for password limitations -->
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/passwordLimitationsHeading"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/askPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ConstraintLayout for the second section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:layout_editor_absoluteX="0dp">

        <!-- Error message for password -->
        <TextView
            android:id="@+id/passwordException"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text=""
            android:textColor="@color/red"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <!-- EditText for entering password -->

        <!-- EditText for entering password -->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/rounded_view"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordException"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/passwordVerifyHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/please_refill_the_password_for_verification"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            tools:visibility="visible" />

        <!-- Error message for password verification -->
        <TextView
            android:id="@+id/passwordVerifyEx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text=""
            android:textColor="@color/red"
            app:layout_constraintTop_toBottomOf="@+id/passwordVerifyHeading"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/PasswordVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/rounded_view"
            android:ems="10"
            android:hint="@string/verify_password_hint"
            android:inputType="textPassword"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordVerifyEx"
            tools:layout_editor_absoluteX="10dp" />

        <!-- Button for proceeding to the next step -->
        <Button
            android:id="@+id/nextBut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@color/next_stage_button"
            android:text="@string/next_button"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordVerify" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


